--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/callbackVersion.ts",
+    "dev": "tsc --watch && nodemon dist/callbackVersion.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
